--- a/src/index.scss
+++ b/src/index.scss
@@ -21,6 +21,8 @@ $bg-gradient: linear-gradient(
   #334d77 100%
 );
 
+$bg-card: rgba(0, 0, 0, 0.5);
+
 body {
   margin: 0px;
   overflow: hidden;
@@ -149,12 +151,30 @@ body {
   }
 }
 
+.more-information {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  justify-content: flex-start;
+  gap: 8px 32px;
+  max-height: 300px;
+  background: $bg-card;
+  padding: 16px 32px;
+  border-radius: 16px;
+  color: $blue1;
+
+  p {
+    margin: 4px;
+  }
+}
+
 .config-options {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  background: rgba(0, 0, 0, 0.5);
+  background: $bg-card;
   padding: 16px 32px;
   border-radius: 16px;
   gap: 32px;
@@ -171,7 +191,7 @@ body {
   &::after {
     position: absolute;
     cursor: pointer;
-    content: "";
+    content: '';
     top: 0;
     left: 0;
     width: 100%;
