--- a/src/index.scss
+++ b/src/index.scss
@@ -132,6 +132,7 @@ body {
   list-style: none;
   display: flex;
   margin: 0;
+  padding: 0;
 }
 
 .config-tab {
@@ -198,9 +199,13 @@ body {
   display: block;
   width: 100px;
   height: 60px;
-  border-radius: 4px;
+  border-radius: 6px;
   position: relative;
   border: none;
+
+  &.active {
+    border: 2px solid $blue1;
+  }
 
   &::after {
     position: absolute;
@@ -210,7 +215,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    border-radius: 5px;
+    border-radius: 4px;
     box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.2);
     background-image: linear-gradient(
       -45deg,
