--- a/src/index.scss
+++ b/src/index.scss
@@ -115,13 +115,15 @@ body {
 }
 
 .header-right {
-  cursor: pointer;
   background-color: rgba($blue4, 0.5);
   padding: 16px 32px;
   border-radius: 16px;
+  display: flex;
+  gap: 16px;
 
   svg {
     transform: translateY(1px);
+    cursor: pointer;
   }
 }
 
@@ -141,6 +143,28 @@ body {
   h5 {
     color: $blue9;
   }
+}
+
+.annotations-stepper-wrapper {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  padding: 16px;
+  transform: translateY(100%);
+}
+
+.annotations-stepper {
+  width: 350px;
+  height: 50px;
+  background-color: rgba($blue4, 0.5);
+  padding: 16px 32px;
+  border-radius: 16px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .config-palette {
@@ -251,4 +275,40 @@ body {
     );
     -webkit-mask-image: linear-gradient(#000, transparent);
   }
+}
+
+.annotation {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  font-family: Arial, sans-serif;
+  font-size: 12px;
+  color: white;
+  text-shadow: 0px 0px 3px rgba(0, 0, 0, 0.8);
+}
+
+.annotation-circle {
+  width: 32px;
+  height: 32px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgba(0, 0, 0, 0.75);
+  border-radius: 50%;
+  font-size: 14px;
+  font-weight: bold;
+  color: white;
+  margin-bottom: 8px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+  border: 1px solid $blue1;
+  cursor: pointer;
+}
+
+.annotation-box {
+  background: rgba(0, 0, 0, 0.75);
+  padding: 4px 8px;
+  border-radius: 4px;
+  margin-bottom: 4px;
+  width: 200px;
 }
