--- a/src/index.scss
+++ b/src/index.scss
@@ -22,6 +22,7 @@ $bg-gradient: linear-gradient(
 );
 
 $bg-card: rgba(0, 0, 0, 0.5);
+$bg-modal: rgba(0, 0, 0, 0.85);
 
 html,
 body {
@@ -33,6 +34,7 @@ body {
   background: $bg-gradient;
   width: 100vw;
   height: 100vh;
+  position: relative;
 }
 
 .home-page {
@@ -222,17 +224,22 @@ body {
 }
 
 .more-information {
+  box-sizing: border-box !important;
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
   align-items: flex-start;
   justify-content: flex-start;
   gap: 8px 32px;
-  max-height: 300px;
-  background: $bg-card;
+  background: $bg-modal;
   padding: 16px 32px;
   border-radius: 16px;
   color: $blue1;
+  position: absolute;
+  left: 2.5%;
+  top: 106px;
+  width: 95%;
+  overflow-y: auto;
+  height: calc(100vh - 290px);
 
   p {
     margin: 4px;
