--- a/src/index.scss
+++ b/src/index.scss
@@ -256,6 +256,11 @@ body {
   padding: 16px 32px;
   border-radius: 16px;
   gap: 32px;
+  color: $blue1;
+
+  input[type='range'] {
+    width: 450px;
+  }
 }
 
 .config-option {
