--- a/src/index.scss
+++ b/src/index.scss
@@ -291,6 +291,7 @@ body {
       rgba(255, 255, 255, 0.25) 50%,
       rgba(255, 255, 255, 0.5) 50%
     );
+    mask-image: linear-gradient(#000, transparent);
     -webkit-mask-image: linear-gradient(#000, transparent);
   }
 }
