--- a/src/index.scss
+++ b/src/index.scss
@@ -114,6 +114,10 @@ body {
   }
 }
 
+.header-part {
+  flex: 1;
+}
+
 .header-center {
   display: flex;
   flex-direction: row;
@@ -122,15 +126,20 @@ body {
 }
 
 .header-right {
-  background-color: rgba($blue4, 0.5);
-  padding: 16px 32px;
-  border-radius: 16px;
   display: flex;
-  gap: 16px;
+  justify-content: flex-end;
 
   svg {
     transform: translateY(1px);
     cursor: pointer;
+  }
+
+  .header-right-box {
+    background-color: rgba($blue4, 0.5);
+    padding: 16px 32px;
+    border-radius: 16px;
+    display: flex;
+    gap: 16px;
   }
 }
 
@@ -159,7 +168,7 @@ body {
   width: 100%;
   display: flex;
   justify-content: center;
-  padding: 16px;
+  padding: 16px 0px;
   transform: translateY(100%);
 }
 
